fix image error

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             Kessoku Band Database
         </div>
         <div class="h-64 w-64 pt-10 ">
-            <img src="./static/kessoku.png" alt="Kessoku Logo">
+            <img src="https://i.ibb.co/sP4WyFK/kessoku.png" alt="Kessoku Logo">
         </div>
         <div class="pt-10 px-10">
             <form action="./server.py" method="POST" enctype="multipart/form-data">
@@ -34,7 +34,7 @@
             <a href="./files.html" class="p-2 bg-neutral-100 text-black rounded-md">Show All Files</a>
         </div>
         <div class="p-1 h-96 w-96">
-            <img src="./static/member.jpg" alt="Member Kessoku">
+            <img src="https://i.ibb.co/gt4PXS7/member.jpg" alt="Member Kessoku">
         </div>
     </div>
 </body>
