idk what i do, but it's better i think

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 <body style="background-color: #1a1a1a">
     <div class="flex flex-col items-center text-white">
         <div style="font-family: 'Comic Sans MS';" class="pt-20 text-4xl">
-            Kessoku Band Database
+            Kessoku Database
         </div>
         <div class="h-64 w-64 pt-10 ">
             <img src="https://i.ibb.co/sP4WyFK/kessoku.png" alt="Kessoku Logo">
         </div>
         <div class="pt-10 px-10">
-            <form action="./server.py" method="POST" enctype="multipart/form-data">
+            <form action="" method="POST" enctype="multipart/form-data">
                 <input type="text" id="searchFile" name="searchFile" style="background-color: #1a1a1a;" class="border-b-4" size="50">
                 <button type="Submit" class="ml-2 h-8 text-justify rounded-md p-1 bg-neutral-100 text-black">Search</button>
             </form>
